--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>    
+    <ul>
+   <li> <a href="./recipes/lasagna.html">Lasagna</a></li>
+   <li> <a href="./recipes/eggplant-parmesan.html">Eggplant Parmesan</a> </a> </li>
+   <li> <a href="./recipes/slow-cooker-steak.html">Slow Cooker Salisbury Steak</a></li>
+       </ul>
 </body>
 
 
